--- a/src/compontents/Quiz/styles.css
+++ b/src/compontents/Quiz/styles.css
@@ -1,10 +1,7 @@
 .quiz {
-  position: absolute;
+  position: relative;
   width: 400px;
-  max-width: calc(100% - 60px);
-  left: 0;
-  right: 0;
-  top: max(calc(50% - 280px), 100px);
+  max-width: 100%;
   margin: auto;
 }
 
